package netty;

import "msg_id.proto";

option optimize_for = LITE_RUNTIME;
option java_package = "wang.gnim.netty.messages";
option java_outer_classname = "TestMessage";

message TestRequest {
    required MsgID  msgID    = 1; 
	optional int32	data1	 = 2;
	optional int32	data2	 = 3;
}

message TestResponse {
    required MsgID      msgID    = 1;
	optional int32		data1	 = 2;
	optional int32		data2	 = 3;
}
